# RAG-Agent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agent/: README.md  aegra.json  pyproject.toml
agent/src/: graph.py
agent/src/memory/: __init__.py  context.py  state.py
agent/src/tools/: __init__.py  add.py  multiply.py  retriever.py
agent/src/utils/: __init__.py  model.py  prompt.py
chroma/: Dockerfile  README.md  config.yaml
frontend/: .env.local  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: app-sidebar.tsx  chat-header.tsx  chat.tsx  message.tsx  messages.tsx  overview.tsx  sidebar-toggle.tsx  text-input.tsx  theme-toggle.tsx
garage/: garage.toml
rag_api/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
rag_api/api/: router.py
rag_api/api/routes/: documents.py  query.py
rag_api/core/: config.py
rag_api/database/: object_storage.py  vector_store.py
rag_api/models/: embedding.py  reranker.py
rag_api/processors/: content_processor.py  file_object_processor.py  file_processor.py
rag_api/schemas/: requests.py  responses.py
rag_api/services/: embedding.py  object.py  rag.py  retriever.py
tests/models_services/: test_chat.py  test_embedding.py  test_reranker.py  utils.py
tests/vllm/: test_chat.py  test_embedding.py  utils.py
vllm-configs/: dev-vllm-chat.yml  dev-vllm-embedding.yml
vllm_configs/: README.md  dev-vllm-chat.yml  dev-vllm-embedding.yml  dev-vllm-reranker.yml
(+14 files in other folders)
