[project]
name = "rag_agent"
version = "0.1.0"
description = "rag_agent"
requires-python = ">=3.13.10"

dependencies = [
    "pytest>=9.1.0",
    "pillow>=12.2.0",
    "pdf2image>=1.17.0",
    "langchain>=1.3.11",
    "langgraph>=1.0.8",
    "langchain-openai>=1.3.3",
    "langchain-classic>=1.0.8",
    "langchain-cohere>=0.6.0",
    "langchain-chroma>=1.1.0",
    "aegra-cli>=0.9.22",
    "langgraph-sdk>=0.4.2",
    "fastapi[standard]>=0.138.1",
    "python-multipart>=0.0.32",
]