[project]
name = "agent"
version = "0.1.0"
description = "agent"
requires-python = ">=3.12"

dependencies = [
    "aegra-cli>=0.9.22",
    "langgraph>=1.0.8",
    "langchain>=0.3.14",
    "langchain-openai>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
