[project]
name = "rag_api"
version = "0.1.0"
description = "rag_api"
requires-python = ">=3.13.10"

dependencies = [
    "fastapi[standard]>=0.138.1",
    "python-multipart>=0.0.32",
    "pillow>=12.2.0",
    "pdf2image>=1.17.0",
    "langchain>=1.3.11",
    "langgraph>=1.0.8",
    "langchain-openai>=1.3.3",
    "langchain-classic>=1.0.8",
    "langchain-cohere>=0.6.0",
    "langchain-chroma>=1.1.0",
]